# PSZT_Neural_Network

./: .gitignore  CMakeLists.txt  Dokumentacja projekt PSZT.docx  FileReader.cpp  FileReader.h  House.cpp  House.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  SampleClass.cpp  SampleClass.hpp  TrainingDataFactory.cpp  TrainingDataFactory.h  main.cpp
Program/: CMakeLists.txt  main.cpp  manual.txt  program_version
Program/sources/: FileReader.cpp  FileReader.h  House.cpp  House.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Serializator.cpp  Serializator.h  TrainingDataFactory.cpp  TrainingDataFactory.h
Program/sources/house/: House.cpp  House.h  NormalizedValuesHouse.cpp  NormalizedValuesHouse.h
Program/sources/neural_network/: ActivationFunctionsBank.cpp  ActivationFunctionsBank.h  FunctionsBank.cpp  FunctionsBank.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTopology.cpp  NeuralNetworkTopology.h  Neuron.cpp  Neuron.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Synapse.cpp  Synapse.h
Program/sources/neural_network/neurons/: BiasNeuron.cpp  BiasNeuron.h  HiddenLayerNeuron.cpp  HiddenLayerNeuron.h  InputNeuron.cpp  InputNeuron.h  Neuron.cpp  Neuron.h  OutputNeuron.cpp  OutputNeuron.h  Synapse.cpp  Synapse.h
Program/sources/program/: K_FOLD.cpp  K_FOLD.h  Program.cpp  Program.h  TestProgram.cpp  TestProgram.h  TrainAndTestProgram.cpp  TrainAndTestProgram.h  TrainProgram.cpp  TrainProgram.h  TrainWithTimer.cpp  TrainWithTimer.h
Program/sources/program/program_initialization/: ProgramInitializer.cpp  ProgramInitializer.h
Program/sources/progress/: ProgressStatus.h  ProgressStatusBar.cpp  ProgressStatusBar.h  ProgressStatusInfo.cpp  ProgressStatusInfo.h  ProgressStatusManager.cpp  ProgressStatusManager.h
Tests/: CMakeLists.txt  NeuralNetworkTests.cpp  SampleTests.cpp  SerializatorTests.cpp  XOR_NNTests.cpp  test_main.cpp
sources/: main.cpp
